--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -5,24 +5,44 @@
 <meta http-equiv='Content-Type' content='text/html;charset=UTF-8' />
 <title>web</title>
 <!-- 1.) Load SAPUI5 (from a remote server), select theme and control library -->
+<!--
+https://sapui5.hana.ondemand.com/resources/sap-ui-core.js
+{{{sapui5_sb.url}}}/sap-ui-core.js
+-->
 <script src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-	id="sap-ui-bootstrap" data-sap-ui-libs="sap.m"
+	id="sap-ui-bootstrap" data-sap-ui-libs="sap.m,sap.ui.table"
 	data-sap-ui-theme="sap_bluecrystal">
-		</script>
+</script>
 <!-- 2.) Create a UI5 button and place it onto the page -->
 <script>
-	// create the button instance
-	var myButton = new sap.m.Button("btn");
-
-	// set properties, e.g. the text (there is also a shorter way of setting several properties)
-	myButton.setText("Hello World!");
-
-	// attach an action to the button's "press" event (use jQuery to fade out the button)
-	myButton.attachPress(function(){$("#btn").fadeOut()});
-
-	// place the button into the HTML element defined below
-	myButton.placeAt("uiArea");
-	</script>
+   var columns = [
+   	 { label: "Order ID", template: "PURCHASEORDERID" },
+   	 { label: "Order ID", template: "PURCHASEORDERID" },
+   	 { label: "Partner", template: "PARTNER" },
+   	 { label: "Note ID", template: "NOTEID" },
+   	 { label: "Gross Amount", template: "GROSSAMOUNT" },
+   	 { label: "Net Amount", template: "NETAMOUNT" },
+   	 { label: "Tax Amount", template: "TAXAMOUNT" },
+   	 { label: "Currency", template: "CURRENCY" }
+   	]
+	function createColum(_column){
+		return new sap.ui.table.Column(_column)
+	}
+	function createColumns(_table){
+		for(var i=0;i< columns.length;i++){
+	    	_table.addColumn(createColum(columns[i]));
+		}
+	}
+	var oModel = new sap.ui.model.odata.v2.ODataModel("/xsodata/purchaseOrder.xsodata", true);
+	// Creating a UI5 Table 
+	var oTable = new sap.ui.table.Table({ title: "Purchase Order" });
+	createColumns(oTable)
+	
+	oTable.setModel(oModel);
+	oTable.bindRows("/POHeader");
+	oTable.placeAt("uiArea");
+</script>
+	
 </head>
 <body class="sapUiBody">
 	<!-- This is where you place the UI5 button -->
